fix togostanza--menu z-index

--- a/stanzas/pagination-table/style.scss
+++ b/stanzas/pagination-table/style.scss
@@ -546,3 +546,7 @@
   color: var(--togostanza-control-font-color);
   padding-top: 1em;
 }
+
+togostanza--menu {
+  z-index: 10000;
+}
